# dotmap

./: .cursorrules  .gitignore  README.md  TODO  config.json  cors_settings.json  debugger.html  index.html  makefiles.sh  package-lock.json  pyproject.toml  server.py
docs/: docs.md
notebooks/: treat_2022.ipynb
tiles/zoom10-10/: tiles.mbtiles
tiles/zoom11-11/: tiles.mbtiles
tiles/zoom12-12/: tiles.mbtiles
tiles/zoom13-13/: tiles.mbtiles
tiles/zoom7-7/: tiles.mbtiles
tiles/zoom8-8/: tiles.mbtiles
tiles/zoom9-9/: tiles.mbtiles
