[project]
name = "dotmap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "geojson>=3.1.0",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "pandas>=2.2.3",
    "geobr>=0.2.2",
]
